<resources>
    <string name="app_name" translatable="false">FashionShop</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="backOnline">Back Online</string>
    <string name="connectionLost">Connection Lost!</string>
    <string name="menu_home">Home</string>
    <string name="notify">Notifications</string>
    <string name="menu_credid">Credid Card</string>
    <string name="menu_orders">Your Orders</string>
    <string name="menu_profile">Your Profile</string>
    <string name="menu_request">Your Product Requests</string>
    <string name="menu_tracking">Tracking Product</string>
    <string name="cart">Cart</string>
    <string name="sign_out_dialog_title_text">Sign Out?</string>
    <string name="sign_out_dialog_message_text">On proceeding, you will be signed out of the app.</string>
    <string name="dialog_sign_out_btn_text">Sign Out</string>
    <string name="pro_cat_dialog_title">Select Product Category</string>
    <string name="pro_cat_dialog_cancel_btn">Cancel</string>
    <string name="pro_cat_dialog_ok_btn">OK</string>
    <string name="welcome_text">Welcome to the FashionShop</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="send_otp_button_text">Send OTP</string>
    <string name="enter_otp_authentication_text">Enter OTP</string>
    <string name="login_button_text">Login</string>
    <string name="title_detail_fragment">Product Details</string>
    <string name="product_not_available">This Product is currently not available</string>
    <string name="title_cart_fragment">Cart</string>
    <string name="title_address_fragment">Add new address</string>
    <string name="title_choose_address_fragment">Choose Address</string>
    <string name="title_edit_address_fragment">Edit Address</string>
    <string name="title_payment_fragment">Choose Payment Method</string>
    <string name="title_summary_fragment">Order Summary</string>
    <string name="title_order_details">Order Details</string>
    <string name="title_add_credid">Add Credid Card</string>
    <string name="title_locate">Select Address</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="shipping_address">Shipping Address-</string>
    <string name="email_helpline">ctempire5@gmail.com</string>
    <string name="mobile_helpline">+917822888840</string>
    <string name="slogan_helpline">We will be glad to help you.</string>
    <string name="helpline">Helpline</string>
    <string name="title_fragment_helpline">Helpline</string>
    <string name="categories">Categories</string>
    <string name="best_selling">Best Selling</string>
    <string name="favourite">Favourites</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyCML0ytjqc4px9hB5_4Lum9AmOhd72OL7o</string>
    <string name="featured_brands">Featured Brands</string>
    <string name="recommended">Recommended</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="itemimagedescription">itemImageDescription</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="order_history">Order History</string>
    <string name="cards">Cards</string>
    <string name="notifications">Notifications</string>
    <string name="logout">LogOut</string>
    <string name="newButton">New</string>
    <string name="cancelButton">Cancel</string>
    <string name="details">Details</string>
    <string name="reviews">Reviews</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="tell_us_your_experience">Tell us your experience</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="no_reviews">No Reviews</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get started</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="please_add_your_phone_number_to_continue">Please add your phone number to continue</string>
    <string name="please_add_a_valid_phone_number">Please add a valid phone number</string>
    <string name="please_check_internet_connection">Please check internet connection</string>
    <string name="errorMessage">An error occurred, Please try again later</string>
    <string name="enter_your_6_digit_code">Enter your 6-digit code</string>
    <string name="code">Code</string>
    <string name="code_hint">- - - - - -</string>
    <string name="type_verification_code_first">Please type verification code first.</string>
    <string name="resend_code">Resend Code</string>
    <string name="countDown">00:%1$02d</string>
    <string name="addUserName">Please add your name first!</string>
    <string name="addUserImage">Please add an  image to your account!</string>
    <string name="addUserEmail">Please add your email first!</string>
    <string name="addUserPhone">Please add your phone first!</string>
    <string name="invalidPhone">Invalid Phone Number Please again!</string>
    <string name="errorCreateAccount">An error occurred when trying to create account, please check your internet connection and try again.</string>
    <string name="accountCreatedSuccessfully">Account created successfully.</string>
    <string name="webClientId" translatable="false">CLIENT ID</string>
    <string name="welcome">Welcome back,</string>
    <string name="see_all">See all</string>
    <string name="shop">Shop</string>
    <string name="explore">Explore</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="productQuantity">%s, Price</string>
    <string name="price">%.2f$</string>
    <string name="shareProduct">Hello bro,\n%1$s product is very awesome and have a very cheap price, it just cost %2$.2f$.\n You can buy it now with Superest
    supermarket app.</string>
    <string name="find_products">Find Products</string>
    <string name="add_all_to_cart">Add all to cart</string>
    <string name="savedToCart">Products have been added to the card successfully.</string>
    <string name="go_to_checkout">Go to checkout</string>
    <string name="my_cart">My Cart</string>
    <string name="productAddToCart">Product added to My Cart successfully.</string>
    <string name="my_orders">My Orders</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="total_cost">Total Cost</string>
    <string name="place_order">Place Order</string>
    <string name="ok">OK</string>
    <string name="addPaymentMethod">Please add a payment method to continue!</string>
    <string name="back_to_home">Back to home</string>
    <string name="successful_order_title">Your Order has been accepted</string>
    <string name="successful_order_message">Your items has been placed and is on its way to begin processed.</string>
    <string name="track_order">Track order</string>
    <string name="fail_order_title">Oops! Order Failed</string>
    <string name="fail_order_message">Something went wrong. Please try another payment card.</string>
    <string name="tryAgain">Try Again</string>
    <string name="paymentError">An error occurred with payment method.</string>
    <string name="error">Error:</string>
    <string name="noProductsCart">No Products in Cart!</string>
    <string name="tracking_order">Tracking Order:</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_placed_message">We have received your order</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_confirmed_message">Your order has been confirmed</string>
    <string name="order_shipped">Order Shipped</string>
    <string name="order_shipped_message">Your order is on its way</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="order_delivered_message">Your order is now in your hands</string>
    <string name="accountSettings">Account Settings</string>
    <string name="logOutMessage">You have logged out successfully</string>
    <string name="locationChanged">Your location changed successfully!</string>
    <string name="myLocation">My Location:</string>
    <string name="productQuantityError">\"Please add valid quantity!\"</string>
    <string name="order_num">Order Num: </string>
    <string name="order_date">Order Date: </string>
    <string name="order_location">Order Location: </string>
    <string name="order_status">Order Status: </string>
    <string name="order_products">Order Products: </string>
    <string name="orderProductsWithCost">%s products - %.2f$</string>
    <string name="product_name">Name:</string>
    <string name="product_quantity">Quantity:</string>
    <string name="product_total_price">Total Price:</string>
    <string name="accountUpdatedSuccessfully">Account Updated Successfully</string>
    <string name="drag_info">Long press any marker and drag to a position for accurate position</string>
    <string name="english" translatable="false">English</string>
    <string name="turkish" translatable="false">Türkçe</string>
    <string name="hindi" translatable="false">हिंदी</string>
    <string name="german" translatable="false">Deuthsch</string>
    <string name="arabic" translatable="false">عربى</string>
    <string name="testing_text">Select Language</string>
    <string name="selected_item" translatable="false">Selected item:</string>
    <string name="wishlist">Wishlist</string>
    <string name="language">Language</string>
    <string name="Sign_in_Phone">Sign in with phone</string>
    <string name="Sign_in_Google">Sign in with Google</string>
    <string name="add_basket">Add to Basket</string>
    <string name="buy_now">Buy Now</string>
    <string name="send_review">Send Revıew</string>
    <string name="add_review">Add Revıew</string>
    <string name="reviewDesc">You can rate the product below and write a comment</string>
    <string name="search_product">Search</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="email_address">Email Address</string>
    <string name="mobile">Mobile Number</string>
    <string name="payment_options">Choose an Payment Option</string>
    <string name="debid">Debid Cart</string>
    <string name="payment_nfc">Contactless Payment (NFC)</string>
    <string name="code_cash">Cash on Delivery (COD)</string>
    <string name="add_comment">Add Comment</string>
    <string name="add_new_address">Add new Address</string>
    <string name="your_address">Your Address</string>
    <string name="search_location">Search Location</string>
    <string name="flat_house">Flat,House no.,Building,company,Apartment</string>
    <string name="area">Area, Colony, Street, Sector, Village</string>
    <string name="town">Town/City</string>
    <string name="edit_address">Edit Address</string>
    <string name="sub_total">"Subtotal - "</string>
    <string name="proceed">Proceed to Buy</string>
</resources>