<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.HelplineFragment">

        <TextView
            android:id="@+id/helpline_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/email_address"/>

        <TextView
            android:id="@+id/helpline_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="sbl.gencturks@gmail.com"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/helpline_email_label" />

        <TextView
            android:id="@+id/helpline_mobile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/helpline_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/mobile"/>

        <TextView
            android:id="@+id/helpline_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/helpline_mobile_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            android:text="@string/mobile_helpline"/>

        <TextView
            android:id="@+id/helpline_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/helpline_mobile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="350dp"
            android:textSize="25sp"
            android:fontFamily="sans-serif-black"
            android:text="@string/slogan_helpline"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>