<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.example.ecommerceapp.models.OrderStatus" />

        <variable
            name="fragment"
            type="com.example.ecommerceapp.ui.tracking.TrackingFragment" />

        <variable
            name="order"
            type="com.example.ecommerceapp.models.Order" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="278dp"
            android:layout_height="205dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:foregroundGravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/basket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:onClick="@{()-> fragment.backPressFragment()}"
            android:padding="8dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/tracking_order"
            android:textColor="@color/black"
            android:textSize="21dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <View
                android:id="@+id/view4"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_margin="10dp"
                android:background="@drawable/ic_green_check"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout3" />

            <View
                android:id="@+id/view6"
                android:layout_width="2dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/green"
                app:layout_constraintEnd_toEndOf="@+id/view4"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <View
                android:id="@+id/view5"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginTop="8dp"
                android:background="@{order.orderStatus != OrderStatus.PLACED? @drawable/ic_green_check: @drawable/shape_status_current}"
                app:layout_constraintEnd_toEndOf="@+id/view4"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toBottomOf="@+id/view6" />

            <View
                android:id="@+id/view8"
                android:layout_width="2dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@{order.orderStatus != OrderStatus.PLACED? @color/green: @color/gray}"
                app:layout_constraintEnd_toEndOf="@+id/view5"
                app:layout_constraintStart_toStartOf="@+id/view5"
                app:layout_constraintTop_toBottomOf="@+id/view5" />

            <View
                android:id="@+id/view7"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginTop="8dp"
                android:background="@{order.orderStatus!= OrderStatus.PLACED &amp;&amp; order.orderStatus!= OrderStatus.APPROVED? @drawable/ic_green_check: @drawable/shape_status_current}"
                app:layout_constraintEnd_toEndOf="@+id/view4"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toBottomOf="@+id/view8" />

            <View
                android:id="@+id/view10"
                android:layout_width="2dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@{order.orderStatus!= OrderStatus.PLACED &amp;&amp; order.orderStatus!= OrderStatus.APPROVED? @color/green: @color/gray}"
                app:layout_constraintEnd_toEndOf="@+id/view7"
                app:layout_constraintStart_toStartOf="@+id/view7"
                app:layout_constraintTop_toBottomOf="@+id/view7" />

            <View
                android:id="@+id/view9"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="8dp"
                android:background="@{order.orderStatus== OrderStatus.DELIVERED? @drawable/ic_green_check: @drawable/shape_status_current}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/view4"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toBottomOf="@+id/view10" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view4"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_placed"
                    android:theme="@style/bigTextTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_placed_message"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="@{order.orderStatus != OrderStatus.PLACED?1.0f:0.3f}"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/view5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view4"
                app:layout_constraintTop_toBottomOf="@+id/view6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_confirmed"
                    android:theme="@style/bigTextTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_confirmed_message"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="@{order.orderStatus!= OrderStatus.PLACED &amp;&amp; order.orderStatus!= OrderStatus.APPROVED?1.0f:0.3f}"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/view7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view4"
                app:layout_constraintTop_toBottomOf="@+id/view8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_shipped"
                    android:theme="@style/bigTextTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_shipped_message"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="@{order.orderStatus== OrderStatus.DELIVERED?1.0f:0.3f}"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/view9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view4"
                app:layout_constraintTop_toTopOf="@+id/view9">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_delivered"
                    android:theme="@style/bigTextTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_delivered_message"
                    android:textColor="@color/gray"
                    android:textSize="12dp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>